fixed horizontal scrollbar mobile, and added breadcrumb for shopping-cart-page

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
 /*Global styles*/
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
